<resources>
    <string name="app_name">TesteAndroid</string>
    <string name="contact">Contato</string>
    <string name="investments">Investimentos</string>
    <string name="investiment">Investimento</string>
    <string name="invest">Investir</string>
    <string name="share">compartilhar</string>
    <string name="download">Baixar</string>
    <string name="divider">divider</string>
    <string name="fund">Fundo</string>
    <string name="cdi">CDI</string>
    <string name="in_month">No mês</string>
    <string name="in_year">No ano</string>
    <string name="twelve_months">12 meses</string>
    <string name="percent">%</string>
    <string name="error">Desculpe, houve um erro!</string>
    <string name="wait">Aguarde</string>
    <string name="loading_information">carregando informações...</string>
    <string name="no_internet_conection">Sem conexão com a internet!</string>
    <string name="retry">Tentar novamente</string>
    <string name="invalid_phone">Telefone inválido!</string>
    <string name="required_field">Campo obrigatório!</string>
    <string name="invalid_mail">E-mail inválido!</string>
    <string name="thanks">Obrigado!</string>
    <string name="send_success">Mensagem enviada com sucesso :)</string>
    <string name="send_new_message">Enviar nova mensagem</string>
</resources>
